# racoon

./: .gitignore  Readme.md  pyproject.toml  setup.py
racoon/: exp.py
racoon/encoder/: __init__.py
racoon/estimator/: __init__.py  _tf.py  type.py
racoon/experiment/: _manager.py
racoon/runner/: _runner.py
