[tool.poetry]
name = "racoon"
version = "0.1.0"
description = ""
authors = ["ktrw <ktr.w1011@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.6"
pandas = "^1.1.5"
xfeat = {git = "https://github.com/pfnet-research/xfeat.git"}
scikit-learn = "^0.24.0"
category-encoders = "^2.2.2"
lightgbm = "^3.1.1"
xgboost = "^1.3.1"
catboost = "^0.24.4"
tensorflow = "^2.3.1"
datasets = "^1.2.1"
ipynb-path = "^0.1.4"

[tool.poetry.scripts]
racoon-exp = "racoon.exp:main"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
jedi = "0.17.2"

[build-system]
requires = ["poetry>=0.12", "setuptools"]
build-backend = "poetry.masonry.api"
